--- a/AccounterApplication.Common/LocalizationResources/Shared/Messages/MessagesResources.resx
+++ b/AccounterApplication.Common/LocalizationResources/Shared/Messages/MessagesResources.resx
@@ -126,4 +126,40 @@
   <data name="DeleteIncomeConfirmation" xml:space="preserve">
     <value>Сигурни ли сте, че искате да изтриете този приход ?</value>
   </data>
+  <data name="ExpenseAddError" xml:space="preserve">
+    <value>Възникна проблем при добавяне на разхода.</value>
+  </data>
+  <data name="ExpenseAddSuccess" xml:space="preserve">
+    <value>Разходът беше добавен успешно.</value>
+  </data>
+  <data name="ExpenseDeleteError" xml:space="preserve">
+    <value>Възникна проблем при изтриване на разхода.</value>
+  </data>
+  <data name="ExpenseDeleteSuccess" xml:space="preserve">
+    <value>Разходът беше изтрит успешно.</value>
+  </data>
+  <data name="ExpenseUpdatedError" xml:space="preserve">
+    <value>Възникна проблем при обновяване на разхода.</value>
+  </data>
+  <data name="ExpenseUpdatedSuccess" xml:space="preserve">
+    <value>Разходът беше обновен успешно.</value>
+  </data>
+  <data name="MonthlyIncomeAddError" xml:space="preserve">
+    <value>Възникна проблем при добавяне на прихода.</value>
+  </data>
+  <data name="MonthlyIncomeAddSuccess" xml:space="preserve">
+    <value>Приходът беше добавен успешно.</value>
+  </data>
+  <data name="MonthlyIncomeDeleteError" xml:space="preserve">
+    <value>Възникна проблем при изтриване на прихода.</value>
+  </data>
+  <data name="MonthlyIncomeDeleteSuccess" xml:space="preserve">
+    <value>Приходът беше изтрит успешно.</value>
+  </data>
+  <data name="MonthlyIncomeUpdatedError" xml:space="preserve">
+    <value>Възникна проблем при обновяване на прихода.</value>
+  </data>
+  <data name="MonthlyIncomeUpdatedSuccess" xml:space="preserve">
+    <value>Приходът беше обновен успешно.</value>
+  </data>
 </root>
