Added Resources Files for Identity Area

--- a/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.en.resx
@@ -135,4 +135,7 @@
   <data name="Update" xml:space="preserve">
     <value>Update</value>
   </data>
+  <data name="UpdatePassword" xml:space="preserve">
+    <value>Update password</value>
+  </data>
 </root>
