--- a/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.resx
+++ b/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.resx
@@ -135,4 +135,7 @@
   <data name="Update" xml:space="preserve">
     <value>Обнови</value>
   </data>
+  <data name="UpdatePassword" xml:space="preserve">
+    <value>Обнови паролата</value>
+  </data>
 </root>
