--- a/AccounterApplication.Common/LocalizationResources/ViewModels/ManageAccountModelResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/ViewModels/ManageAccountModelResources.en.resx
@@ -117,31 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Good Afternoon" xml:space="preserve">
-    <value>Добър ден</value>
+  <data name="ConfirmPassword" xml:space="preserve">
+    <value>Confirm password</value>
   </data>
-  <data name="Good Evening" xml:space="preserve">
-    <value>Добър вечер</value>
+  <data name="CurrentPassword" xml:space="preserve">
+    <value>Current password</value>
   </data>
-  <data name="Good Morning" xml:space="preserve">
-    <value>Добро утро</value>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
   </data>
-  <data name="Hello" xml:space="preserve">
-    <value>Здравей</value>
+  <data name="NewPassword" xml:space="preserve">
+    <value>New password</value>
   </data>
-  <data name="Log In" xml:space="preserve">
-    <value>Влез</value>
+  <data name="PasswordChanged" xml:space="preserve">
+    <value>Your password has been changed.</value>
   </data>
-  <data name="Log out" xml:space="preserve">
-    <value>Излез</value>
+  <data name="PasswordsNotMatch" xml:space="preserve">
+    <value>The new password and confirmation password do not match.</value>
   </data>
-  <data name="Profile" xml:space="preserve">
-    <value>Профил</value>
+  <data name="PhoneNumber" xml:space="preserve">
+    <value>Phone number</value>
   </data>
-  <data name="Register" xml:space="preserve">
-    <value>Регистрирай се</value>
+  <data name="ProfileUpdated" xml:space="preserve">
+    <value>Your profile has been updated.</value>
   </data>
-  <data name="Settings" xml:space="preserve">
-    <value>Настройки</value>
+  <data name="Required" xml:space="preserve">
+    <value>The field is required.</value>
+  </data>
+  <data name="Username" xml:space="preserve">
+    <value>Username</value>
   </data>
 </root>
