--- a/AccounterApplication.Common/LocalizationResources/ViewModels/ManageAccountModelResources.resx
+++ b/AccounterApplication.Common/LocalizationResources/ViewModels/ManageAccountModelResources.resx
@@ -117,22 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Add Expense" xml:space="preserve">
-    <value>Добави Разход</value>
+  <data name="ConfirmPassword" xml:space="preserve">
+    <value>Потвърди паролата</value>
   </data>
-  <data name="Add Income" xml:space="preserve">
-    <value>Добави Приход</value>
+  <data name="CurrentPassword" xml:space="preserve">
+    <value>Настояща парола</value>
   </data>
-  <data name="Dashboard" xml:space="preserve">
-    <value>Табло</value>
+  <data name="Email" xml:space="preserve">
+    <value>Електронна поща</value>
   </data>
-  <data name="Expenses" xml:space="preserve">
-    <value>Разходи</value>
+  <data name="NewEmail" xml:space="preserve">
+    <value>Нова електронна поща</value>
   </data>
-  <data name="Incomes" xml:space="preserve">
-    <value>Приходи</value>
+  <data name="NewPassword" xml:space="preserve">
+    <value>Нова парола</value>
   </data>
-  <data name="Overview" xml:space="preserve">
-    <value>Преглед</value>
+  <data name="PasswordChanged" xml:space="preserve">
+    <value>Паролата ви беше обновена.</value>
+  </data>
+  <data name="PasswordsNotMatch" xml:space="preserve">
+    <value>Паролите не съвпадат.</value>
+  </data>
+  <data name="PhoneNumber" xml:space="preserve">
+    <value>Телефонен номер</value>
+  </data>
+  <data name="ProfileUpdated" xml:space="preserve">
+    <value>Вашият профил беше обновен.</value>
+  </data>
+  <data name="Required" xml:space="preserve">
+    <value>Полето е задължително.</value>
+  </data>
+  <data name="Username" xml:space="preserve">
+    <value>Потребителско име</value>
   </data>
 </root>
