Component Views ViewModels

--- a/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.en.resx
@@ -126,6 +126,9 @@
   <data name="Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="CreateFund" xml:space="preserve">
+    <value>Create new Fund</value>
+  </data>
   <data name="Delete" xml:space="preserve">
     <value>Delete</value>
   </data>
