--- a/AccounterApplication.Common/LocalizationResources/Views/Components/ComponentsViewsResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/Views/Components/ComponentsViewsResources.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddAmount" xml:space="preserve">
+    <value>Add Amount</value>
+  </data>
   <data name="AddComponent" xml:space="preserve">
     <value>Create new component</value>
   </data>
