--- a/AccounterApplication.Common/LocalizationResources/Shared/Messages/MessagesResources.resx
+++ b/AccounterApplication.Common/LocalizationResources/Shared/Messages/MessagesResources.resx
@@ -192,4 +192,10 @@
   <data name="Success" xml:space="preserve">
     <value>Успех!</value>
   </data>
+  <data name="TransactionResultError" xml:space="preserve">
+    <value>Възникна проблем при осъществяване на транзакцията.</value>
+  </data>
+  <data name="TransactionResultSuccess" xml:space="preserve">
+    <value>Транзакцията беше осъществена успешно.</value>
+  </data>
 </root>
