--- a/AccounterApplication.Common/LocalizationResources/ViewModels/ComponentSaveWithdrawInputModelResources.resx
+++ b/AccounterApplication.Common/LocalizationResources/ViewModels/ComponentSaveWithdrawInputModelResources.resx
@@ -117,34 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Accept" xml:space="preserve">
-    <value>Accept</value>
+  <data name="TransactionAmount" xml:space="preserve">
+    <value>Сума</value>
   </data>
-  <data name="Add" xml:space="preserve">
-    <value>Add</value>
+  <data name="UserPaymentComponent" xml:space="preserve">
+    <value>Разплащателна компонента</value>
   </data>
-  <data name="Cancel" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
-  <data name="CreateFund" xml:space="preserve">
-    <value>Create new Fund</value>
-  </data>
-  <data name="Delete" xml:space="preserve">
-    <value>Delete</value>
-  </data>
-  <data name="Register" xml:space="preserve">
-    <value>Register</value>
-  </data>
-  <data name="Save" xml:space="preserve">
-    <value>Save</value>
-  </data>
-  <data name="Update" xml:space="preserve">
-    <value>Update</value>
-  </data>
-  <data name="UpdatePassword" xml:space="preserve">
-    <value>Update password</value>
-  </data>
-  <data name="Withdraw" xml:space="preserve">
-    <value>Withdraw</value>
+  <data name="UserSavingsComponent" xml:space="preserve">
+    <value>Спестовна компонента</value>
   </data>
 </root>
