--- a/AccounterApplication.Common/LocalizationResources/Views/Components/ComponentsViewsResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/Views/Components/ComponentsViewsResources.en.resx
@@ -129,13 +129,19 @@
   <data name="DeleteComponent" xml:space="preserve">
     <value>Delete</value>
   </data>
-  <data name="EditComponent" xml:space="preserve">
-    <value>Edit</value>
-  </data>
   <data name="Funds" xml:space="preserve">
     <value>Funds</value>
   </data>
+  <data name="NewTransaction" xml:space="preserve">
+    <value>New Transaction</value>
+  </data>
+  <data name="Rename" xml:space="preserve">
+    <value>Rename</value>
+  </data>
   <data name="SaveOrWithdraw" xml:space="preserve">
     <value>Save/Withdraw</value>
+  </data>
+  <data name="SaveOrWithdrawAmount" xml:space="preserve">
+    <value>Save or withdraw amount.</value>
   </data>
 </root>
