--- a/AccounterApplication.Common/LocalizationResources/ViewModels/ComponentSaveWithdrawInputModelResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/ViewModels/ComponentSaveWithdrawInputModelResources.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AmountNotInRange" xml:space="preserve">
+    <value>The amount should be a number between 0.1 and 1000000000.</value>
+  </data>
   <data name="TransactionAmount" xml:space="preserve">
     <value>Amount</value>
   </data>
