--- a/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.en.resx
@@ -123,6 +123,9 @@
   <data name="Add" xml:space="preserve">
     <value>Add</value>
   </data>
+  <data name="AddAmount" xml:space="preserve">
+    <value>Add аmount</value>
+  </data>
   <data name="Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
