--- a/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.en.resx
@@ -135,6 +135,9 @@
   <data name="Delete" xml:space="preserve">
     <value>Delete</value>
   </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
   <data name="Register" xml:space="preserve">
     <value>Register</value>
   </data>
