--- a/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.resx
+++ b/AccounterApplication.Common/LocalizationResources/Shared/Buttons/ButtonsResources.resx
@@ -135,6 +135,9 @@
   <data name="Delete" xml:space="preserve">
     <value>Изтрий</value>
   </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Промени</value>
+  </data>
   <data name="Register" xml:space="preserve">
     <value>Регистрация</value>
   </data>
