--- a/AccounterApplication.Common/LocalizationResources/Views/Components/ComponentsViewsResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/Views/Components/ComponentsViewsResources.en.resx
@@ -132,6 +132,9 @@
   <data name="DeleteComponent" xml:space="preserve">
     <value>Delete</value>
   </data>
+  <data name="EditComponent" xml:space="preserve">
+    <value>Edit component</value>
+  </data>
   <data name="Funds" xml:space="preserve">
     <value>Funds</value>
   </data>
