--- a/AccounterApplication.Common/LocalizationResources/Views/Components/ComponentsViewsResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/Views/Components/ComponentsViewsResources.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Active" xml:space="preserve">
+    <value>Active</value>
+  </data>
   <data name="AddAmount" xml:space="preserve">
     <value>Add Amount</value>
   </data>
@@ -137,6 +140,9 @@
   </data>
   <data name="Funds" xml:space="preserve">
     <value>Funds</value>
+  </data>
+  <data name="Inactive" xml:space="preserve">
+    <value>Inactive</value>
   </data>
   <data name="NewTransaction" xml:space="preserve">
     <value>New Transaction</value>
