--- a/AccounterApplication.Common/LocalizationResources/Views/Components/ComponentsViewsResources.resx
+++ b/AccounterApplication.Common/LocalizationResources/Views/Components/ComponentsViewsResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Active" xml:space="preserve">
+    <value>Активна</value>
+  </data>
   <data name="AddAmount" xml:space="preserve">
     <value>Добави сума</value>
   </data>
@@ -137,6 +140,9 @@
   </data>
   <data name="Funds" xml:space="preserve">
     <value>Средства</value>
+  </data>
+  <data name="Inactive" xml:space="preserve">
+    <value>Неактивна</value>
   </data>
   <data name="NewTransaction" xml:space="preserve">
     <value>Нова Транзакция</value>
