Fix in edit Incomes

--- a/AccounterApplication.Common/LocalizationResources/Views/MonthlyIncomes/IncomesViewsResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/Views/MonthlyIncomes/IncomesViewsResources.en.resx
@@ -123,6 +123,9 @@
   <data name="Amount" xml:space="preserve">
     <value>Amount</value>
   </data>
+  <data name="Component" xml:space="preserve">
+    <value>Component</value>
+  </data>
   <data name="Date" xml:space="preserve">
     <value>Date</value>
   </data>
