--- a/AccounterApplication.Common/LocalizationResources/ViewModels/ExpenseInputModelResources.resx
+++ b/AccounterApplication.Common/LocalizationResources/ViewModels/ExpenseInputModelResources.resx
@@ -120,6 +120,9 @@
   <data name="Amount" xml:space="preserve">
     <value>Сума</value>
   </data>
+  <data name="Component" xml:space="preserve">
+    <value>Сметка</value>
+  </data>
   <data name="DateNotValid" xml:space="preserve">
     <value>Датата не е валидна.</value>
   </data>
