--- a/AccounterApplication.Common/LocalizationResources/Areas/Administration/Views/Nomenclatures/NomenclatureViewResources.resx
+++ b/AccounterApplication.Common/LocalizationResources/Areas/Administration/Views/Nomenclatures/NomenclatureViewResources.resx
@@ -117,16 +117,43 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Code" xml:space="preserve">
+    <value>Код</value>
+  </data>
   <data name="ComponentTypes" xml:space="preserve">
     <value>Типове компоненти</value>
+  </data>
+  <data name="Create" xml:space="preserve">
+    <value>Създай</value>
+  </data>
+  <data name="CreatedOn" xml:space="preserve">
+    <value>Създаден на</value>
   </data>
   <data name="Currencies" xml:space="preserve">
     <value>Валути</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Изтрий</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Промени</value>
+  </data>
   <data name="ExpenseGroups" xml:space="preserve">
     <value>Разходни групи</value>
   </data>
+  <data name="IsMain" xml:space="preserve">
+    <value>Системен запис</value>
+  </data>
+  <data name="NameBG" xml:space="preserve">
+    <value>Име БГ</value>
+  </data>
+  <data name="NameEN" xml:space="preserve">
+    <value>Име ЕН</value>
+  </data>
   <data name="Nomenclatures" xml:space="preserve">
     <value>Номенклатури</value>
+  </data>
+  <data name="Sign" xml:space="preserve">
+    <value>Знак</value>
   </data>
 </root>
