--- a/AccounterApplication.Common/LocalizationResources/Views/Identity/IdentityResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/Views/Identity/IdentityResources.en.resx
@@ -156,7 +156,7 @@
   <data name="Register" xml:space="preserve">
     <value>Register</value>
   </data>
-  <data name="RegisterNewUser" xml:space="preserve">
+  <data name="RegisterUser" xml:space="preserve">
     <value>Register as a new user</value>
   </data>
   <data name="SendVerificationEmail" xml:space="preserve">
