--- a/AccounterApplication.Common/LocalizationResources/ViewModels/ManageAccountModelResources.en.resx
+++ b/AccounterApplication.Common/LocalizationResources/ViewModels/ManageAccountModelResources.en.resx
@@ -147,4 +147,7 @@
   <data name="Username" xml:space="preserve">
     <value>Username</value>
   </data>
+  <data name="WrongPassword" xml:space="preserve">
+    <value>Wrong password</value>
+  </data>
 </root>
